--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
- },
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,6 +18,7 @@
     "express": "^4.18.3",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1"
   }
